example/config/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app.kubernetes.io/component: app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: app
          image: ghcr.io/digitalinteraction/data-officer
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /app/auth.yml
              name: auth
              subPath: auth.yml
          readinessProbe:
            tcpSocket: { port: http }
          livenessProbe:
            httpGet: { port: http, path: /healthz }
          resources:
            requests: { memory: 64Mi, cpu: 50m }
            limits: { memory: 128Mi, cpu: 200m }

      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      volumes:
        - name: auth
          secret:
            secretName: auth
