example/config/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app.kubernetes.io/component: redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: redis

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app.kubernetes.io/component: redis
    spec:
      containers:
        - name: redis
          image: redis
          resources:
            requests: { memory: '128Mi', cpu: '250m' }
          ports:
            - containerPort: 6379
          readinessProbe:
            exec: { command: [redis-cli, ping] }
            initialDelaySeconds: 5
          livenessProbe:
            exec: { command: [redis-cli, ping] }
            initialDelaySeconds: 5
          volumeMounts:
            - mountPath: /data
              name: data

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis
