example/config/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 8080
